--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,32 @@ body
     border: 1px solid #DDD;
     margin: auto;
 }
+
+#cabecera
+{
+    background-color: #88f;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 00.75);
+
+
+}
 #container h1
 {
  font-size: 20px;
+}
+
+#cabecera #tagline
+{
+    font-weight: bold;
+    font-size: 0.8em;
+    padding: 0 0 0 1em;
+}
+
+#post
+{
+    padding: 1em;
+
 }
